# ShapePriors_GCPR16

./: CMakeLists.txt  README.md
apps/: shapeprior.cpp
cmake_modules/: FindVIZ.cmake
data/kitti/calib/: 000046.txt
data/kitti/detections/: 000046_10.txt
data/kitti/planes/: 000046_10.txt
data/kitti/poses/: 000046.txt
src/: geometry.cpp  geometry.h  io.cpp  io.h  shapespace.h  tracking.cpp  tracking.h  utils.cpp  utils.h
src/optimization/: defines.h  pose.cpp  pose.h  shape.cpp  shape.h
